@@ -121,14 +121,14 @@
 # x86_64-gcc    64bit GNU Compiler
 # i686-icc 	32bit Intel Compiler
 # i686-gcc  	32bit GNU Compiler
-# 
+#
 #SYSTEM 		= x86_64-icc 	# Use this as fallback
 SYSTEM 		= $(shell uname -m)-icc
 
 # This is the directory where the potfit binary will be moved to.
 # If it is empty, the binary will not be moved.
 BIN_DIR 	= ${HOME}/bin/i386-linux
-# BIN_DIR 	=
+#BIN_DIR 	=
 
 # Base directory of your installation of the MKL or ACML
 MKLDIR          = /common/linux/paket/intel/compiler-11.0/cc/mkl
