@@ -250,7 +250,7 @@ void ms_value(real r, real *p, real *f)
  *
  * buckingham potential (without derivative!) - slightly modified
  *
- * http://dx.doi.org/doi:10.1098/rspa.1977.0049 
+ * http://dx.doi.org/doi:10.1098/rspa.1977.0049
  *
  ****************************************************************/
 
@@ -758,7 +758,7 @@ int apot_check_params(real *params)
     }
 
     /* jump to next potential */
-    j += 1 + apot_table.n_par[i] + smooth_pot[i];
+    j += 2 + apot_parameters(apot_table.names[i]) + smooth_pot[i];
   }
   return 0;
 }
